# nodec_scene_serialization

./: CMakeLists.txt
.github/workflows/: build.yaml
docs/: .$note.drawio.dtmp
include/nodec_scene_serialization/: archive_context.hpp  entity_builder.hpp  entity_serializer.hpp  scene_serialization.hpp  serializable_component.hpp
include/nodec_scene_serialization/components/: non_serialized.hpp  prefab.hpp
tests/: CMakeLists.txt
